z-index to fixed-menu

--- a/src/scss/body.scss
+++ b/src/scss/body.scss
@@ -2,5 +2,5 @@ body
 {
     background-color: darken($color: $base-color, $amount: 45%);
     overflow-x: hidden;
-    height: 200vh;
+    min-height: 1000vh;
 }
